Nova programacao. Fim do envio de palestras
Former-commit-id: fd4e8c2f16c1b27e8ffb9b7af0199b21cf74cb13 [formerly 650801afa7a2da818a1f7dafc2642439ee1ead0e]
Former-commit-id: ce0bce9b2d7684900d0a3ec102daec73a73b5be1

--- a/theme/templates/includes/days/day1.html
+++ b/theme/templates/includes/days/day1.html
@@ -19,7 +19,7 @@
 
   <div class="lecture">
     <p class="hour"><time>09:15</time></p>
-    <p><span class="track track-keynote">#auditório</span></p>
+    <p><span class="track track-beginners">#auditório</span></p>
     <p class="talk">KeyNote</p>
     <p class="speaker">Fernando Massanori</p>
   </div>
@@ -32,22 +32,26 @@
 
   <div class="lecture">
     <p class="hour"><time>10:30</time></p>
-    <p><span class="track track-keynote">#auditório</span></p>
+    <p><span class="track track-beginners">#auditório</span></p>
     <p class="talk">Funções também são objetos!</p>
     <p class="speaker">Luciano Ramalho</p>
 
-    <p><span class="track track-pydata">#sala 1</span></p>
+    <p><span class="track track-tutorials">#sala 1</span></p>
     <p class="talk">Introducao ao Python para cientistas</p>
-    <p class="speaker">M. Gomes</p>
+    <p class="speaker">Márcio Gomes da Silva</p>
+
+    <p><span class="track track-web">#sala 2</span></p>
+    <p class="talk">Conhecendo e utilizando o simulador de redes tolerantes a atrasos PyDTN.</p>
+    <p class="speaker">Matheus Monte</p>
   </div>
 
   <div class="lecture">
     <p class="hour"><time>11:15</time></p>
-    <p><span class="track track-tutorials">#auditório</span></p>
+    <p><span class="track track-beginners">#auditório</span></p>
     <p class="talk">Python Assíncrono</p>
     <p class="speaker">Nilo Menezes</p>
 
-    <p><span class="track track-career">#sala 1</span></p>
+    <p><span class="track track-tutorials">#sala 1</span></p>
     <p class="talk">Marketing e Persuasão, Design em Código, Empreendorismo Digital.</p>
     <p class="speaker">Loren Carla</p>
   </div>
@@ -60,43 +64,47 @@
 
   <div class="lecture">
     <p class="hour"><time>13:30</time></p>
-    <p><span class="track track-pydata">#auditório</span></p>
+    <p><span class="track track-beginners">#auditório</span></p>
     <p class="talk">House of data - ciência de dados para desenvolvedores</p>
     <p class="speaker">Ana Paula Gomes</p>
 
     <p><span class="track track-tutorials">#sala 1</span></p>
     <p class="talk">Acessibilidade para deficientes visuais com Python</p>
-    <p class="speaker">Marcos P.</p>
+    <p class="speaker">Marcos Paulo</p>
 
-    <p><span class="track track-tutorials">#sala 2</span></p>
+    <p><span class="track track-web">#sala 2</span></p>
     <p class="talk">Deploy fácil e automático do seu projeto Django com Jenkins e Elastic Beanstalk</p>
-    <p class="speaker">Julio Eiras</p>
+    <p class="speaker">Julio Melanda</p>
   </div>
 
   <div class="lecture">
     <p class="hour"><time>14:15</time></p>
-    <p><span class="track track-web">#auditório</span></p>
+    <p><span class="track track-beginners">#auditório</span></p>
     <p class="talk">Tecnologia REST em Python</p>
     <p class="speaker">Allex Lima</p>
 
-    <p><span class="track track-web">#sala 1</span></p>
+    <p><span class="track track-tutorials">#sala 1</span></p>
     <p class="talk">Django para startups: o caso da amazonense Jukx App</p>
     <p class="speaker">Felipe Carvalho</p>
 
-    <p><span class="track track-tutorials">#sala 2</span></p>
+    <p><span class="track track-web">#sala 2</span></p>
     <p class="talk">Análise de Sentimento em Redes Sociais utilizando Scikit-learn+NLTK</p>
     <p class="speaker">Thais Almeida</p>
   </div>
 
   <div class="lecture">
     <p class="hour"><time>15:00</time></p>
-    <p><span class="track track-web">#auditório</span></p>
+    <p><span class="track track-beginners">#auditório</span></p>
     <p class="talk">Começando com o microframework web Python mais popular: Flask!</p>
     <p class="speaker">Felipe Colen</p>
 
     <p><span class="track track-tutorials">#sala 1</span></p>
     <p class="talk">Buzzwords desconstruídas: bitcoin e blockchain!</p>
-    <p class="speaker">M.Costa</p>
+    <p class="speaker">Mateus Costa</p>
+
+    <p><span class="track track-web">#sala 2</span></p>
+    <p class="talk">Arquitetura de BigData na globo.com</p>
+    <p class="speaker">Tarsis Figueredo Azevedo</p>
   </div>
 
   <div class="lecture">
@@ -107,19 +115,23 @@
 
   <div class="lecture">
     <p class="hour"><time>16:15</time></p>
-    <p><span class="track track-career">#auditório</span></p>
+    <p><span class="track track-beginners">#auditório</span></p>
     <p class="talk">Trabalho remoto - é mesmo assim tão bom?</p>
-    <p class="speaker">Julio Eiras</p>
+    <p class="speaker">Julio Melanda</p>
 
-    <p><span class="track track-career">#sala 1</span></p>
+    <p><span class="track track-tutorials">#sala 1</span></p>
     <p class="talk">Programando a Felicidade</p>
-    <p class="speaker">Renzo</p>
+    <p class="speaker">Renzo Nuccitelli</p>
+
+    <p><span class="track track-web">#sala 2</span></p>
+    <p class="talk">Pythonzão: uma saga do Python no mundo de Big Data</p>
+    <p class="speaker">Bruno Ábia Souza</p>
 
   </div>
 
   <div class="lecture">
     <p class="hour"><time>17:00</time></p>
-    <p><span class="track track-keynote">#auditório</span></p>
+    <p><span class="track track-beginners">#auditório</span></p>
     <p class="talk">Encontro com a comunidade</p>
     <p class="speaker"></p>
   </div>
