--- a/theme/templates/includes/days/day2.html
+++ b/theme/templates/includes/days/day2.html
@@ -19,7 +19,7 @@
 
   <div class="lecture">
     <p class="hour"><time>09:15</time></p>
-    <p><span class="track track-keynote">#auditório</span></p>
+    <p><span class="track track-beginners">#auditório</span></p>
     <p class="talk">KeyNote</p>
     <p class="speaker">Nilo Menezes</p>
   </div>
@@ -32,24 +32,34 @@
 
   <div class="lecture">
     <p class="hour"><time>10:30</time></p>
-    <p><span class="track track-tutorials">#auditório</span></p>
-    <p class="talk">Programming soft skills</p>
-    <p class="speaker">Wille Marcel</p>
-
-    <p><span class="track track-web">#sala 1</span></p>
-    <p class="talk">Docker, Django e Amazon Container Services</p>
-    <p class="speaker">Nilo Menezes</p>
-  </div>
-
-  <div class="lecture">
-    <p class="hour"><time>11:15</time></p>
-    <p><span class="track track-tutorials">#auditório</span></p>
-    <p class="talk">Kivy: Python no celular e em vários outros lugares!</p>
-    <p class="speaker">Diego Dukao</p>
+    <p><span class="track track-beginners">#auditório</span></p>
+    <p class="talk">Usando Python para a introdução à programação em cursos universitários</p>
+    <p class="speaker">Carla Amor Divino Moreira Delgado</p>
 
     <p><span class="track track-tutorials">#sala 1</span></p>
     <p class="talk">Code Smells &amp; Refactoring - Who you gonna call?</p>
     <p class="speaker">Ana Paula Gomes</p>
+
+    <p><span class="track track-web">#sala 2</span></p>
+    <p class="talk">Aprendendo conceitos de Física com Python: uma introdução ao VPython!</p>
+    <p class="speaker">Paulo Giovani</p>
+  </div>
+
+  <div class="lecture">
+    <p class="hour"><time>11:15</time></p>
+    <p><span class="track track-beginners">#auditório</span></p>
+    <p class="talk">Kivy: Python no celular e em vários outros lugares!</p>
+    <p class="speaker">Diego Moreira Guimarães</p>
+
+    <p><span class="track track-tutorials">#sala 1</span></p>
+    <p class="talk">Docker, Django e Amazon Container Services</p>
+    <p class="speaker">Nilo Menezes</p>
+
+    <p><span class="track track-web">#sala 2</span></p>
+    <p class="talk">Hospedando uma aplicação Django no Azure</p>
+    <p class="speaker">Matheus Monte</p>
+
+
   </div>
 
   <div class="lecture">
@@ -60,30 +70,38 @@
 
   <div class="lecture">
     <p class="hour"><time>13:30</time></p>
-    <p><span class="track track-web">#auditório</span></p>
+    <p><span class="track track-beginners">#auditório</span></p>
     <p class="talk">Web2Py: Aplicações web descomplicadas em Python!</p>
-    <p class="speaker">Elloa</p>
+    <p class="speaker">Elloa B>. Guedes</p>
 
     <p><span class="track track-tutorials">#sala 1</span></p>
-    <p class="talk">Unidos e distribuídos</p>
-    <p class="speaker">Ana Lacerda</p>
+    <p class="talk">PyLadies Belém: O começo de uma trajetória pythônica!</p>
+    <p class="speaker">Jéssica Paz</p>
+
+    <p><span class="track track-web">#sala 2</span></p>
+    <p class="talk">Docker - Colocando aplicações em produção</p>
+    <p class="speaker">Rafael Chiavegatto</p>
 
   </div>
 
   <div class="lecture">
     <p class="hour"><time>14:15</time></p>
-    <p><span class="track track-tutorials">#auditório</span></p>
+    <p><span class="track track-beginners">#auditório</span></p>
     <p class="talk">Prevendo futuro com machine learning</p>
     <p class="speaker">Emilio Simoni</p>
 
-    <p><span class="track track-web">#sala 1</span></p>
+    <p><span class="track track-tutorials">#sala 1</span></p>
     <p class="talk">Python + Flask + MongoDB = Quokka CMS</p>
-    <p class="speaker">Marcos P.</p>
+    <p class="speaker">Marcos Paulo</p>
+
+    <p><span class="track track-web">#sala 2</span></p>
+    <p class="talk">Utilização da Linguagem Python e dos conhecimentos em Matemática no Ensino da Lógica de Programação</p>
+    <p class="speaker">Karla Pereira</p>
   </div>
 
   <div class="lecture">
     <p class="hour"><time>15:00</time></p>
-    <p><span class="track track-pydata">#auditório</span></p>
+    <p><span class="track track-beginners">#auditório</span></p>
     <p class="talk">Python, ciência dos dados e redes sociais: uma combinação poderosa</p>
     <p class="speaker">Alice Adativa</p>
 
@@ -100,7 +118,7 @@
 
   <div class="lecture">
     <p class="hour"><time>16:15</time></p>
-    <p><span class="track track-career">#auditório</span></p>
+    <p><span class="track track-beginners">#auditório</span></p>
     <p class="talk">Palestra Seja um Autor de livros técnicos</p>
     <p class="speaker">Ana Carolina Prates</p>
 
@@ -108,7 +126,7 @@
 
   <div class="lecture">
     <p class="hour"><time>17:00</time></p>
-    <p><span class="track track-keynote">#auditório</span></p>
+    <p><span class="track track-beginners">#auditório</span></p>
     <p class="talk">Mesa Redonda</p>
     <p class="speaker"></p>
   </div>
