--- a/theme/templates/includes/volunteers.html
+++ b/theme/templates/includes/volunteers.html
@@ -1,8 +1,12 @@
 <section class="volunteers">
   <div class="row" align="center">
+    <h1>Organização</h1>
+    <a href="https://twitter.com/lskbr" target="_blank">Nilo Menezes (PyNorte)</a>
+    <br/>
+    <br/>
+    <br/>
     <h1>Voluntários</h1>
     <ul>
-      <li><a href="https://twitter.com/lskbr" target="_blank">Nilo Menezes (PyNorte)</a></li>
       <li><a href="https://twitter.com/apast" target="_blank">Adriano Praia (PyNorte/Manaus)</a></li>
       <li><a href="https://twitter.com/luizfcb" target="_blank">Fabio Barrionuevo da Luz (PyNorte/Palmas)</a></li>
       <li><a href="https://twitter.com/pixeledbird" target="_blank">João Soares (PyNorte/Belém)</a></li>
