--- a/theme/templates/includes/about.html
+++ b/theme/templates/includes/about.html
@@ -20,7 +20,7 @@
         {% include "includes/icons/staff-icon.html" %}
         <h1>Envie sua proposta de palestra!</h1>
           <p>Apresente na PyCon Amazônia e compartilhe o que você sabe sobre Python com a comunidade.</p>
-          <p class="code-of-conduct"><a href="mailto:pyamazonia@python.org.br" target="_blank">Envie sua proposta</a></p>
+          <p class="code-of-conduct">ENCERRADO</p>
       </div>
       <div class="column">
         {% include "includes/icons/staff-icon.html" %}
