--- a/theme/templates/includes/location.html
+++ b/theme/templates/includes/location.html
@@ -3,6 +3,8 @@
     {% include "includes/icons/maps-icon.html" %}
 
     <h1>Manaus - Amazonas</h1>
+    <h2><a href="/images/manaus.pdf" target="_blank" class="link">Informações Turísticas e de Hospedagem</a></h2>
+    <h3>Endereço do evento</h3>
     <p>
       Avenida Darcy Vargas, 1200 - Parque 10<br/>
       69050-020 Manaus, Amazonas
@@ -19,13 +21,5 @@
               height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
   </div>
-  <div class="row rates">
-    <div class="tax">
-      <h2><a href="http://www.accorhotels.com/pt-br/hotel-8945-caesar-business-manaus/index.shtml" target="_blank" class="link">HOTEL Caesar Business Manaus</a> - 3 noites (11, 12, 13)</h2>
-      <p>
-        Quarto Superior – R$ 645,66<br>
-        Quarto Luxo – R$ 755,82
-      </p>
-    </div>
-  </div>
+
 </section>
