Pequena correcao de nome de palestrante
Former-commit-id: aaa37375ee4da0b2661bc9d486e9f9a850853c24 [formerly a474414b7853f3effd423a4251cb0b373a4c7eaa]
Former-commit-id: cc43f0c54b29ca2c503ebce99e869aa53d814886

--- a/theme/templates/includes/days/day1.html
+++ b/theme/templates/includes/days/day1.html
@@ -53,7 +53,7 @@
 
     <p><span class="track track-tutorials">#sala 1</span></p>
     <p class="talk">Marketing e Persuasão, Design em Código, Empreendorismo Digital.</p>
-    <p class="speaker">Loren Carla</p>
+    <p class="speaker">Loren Cayali e Wanderson Jackson</p>
   </div>
 
   <div class="lecture">
