--- a/theme/templates/includes/days/day1.html
+++ b/theme/templates/includes/days/day1.html
@@ -33,8 +33,8 @@
   <div class="lecture">
     <p class="hour"><time>10:30</time></p>
     <p><span class="track track-beginners">#auditório</span></p>
-    <p class="talk">Funções também são objetos!</p>
-    <p class="speaker">Luciano Ramalho</p>
+    <p class="talk">Programando a Felicidade</p>
+    <p class="speaker">Renzo Nuccitelli</p>
 
     <p><span class="track track-tutorials">#sala 1</span></p>
     <p class="talk">Introducao ao Python para cientistas</p>
@@ -54,7 +54,12 @@
     <p><span class="track track-tutorials">#sala 1</span></p>
     <p class="talk">Marketing e Persuasão, Design em Código, Empreendorismo Digital.</p>
     <p class="speaker">Loren Cayali e Wanderson Jackson</p>
+
+    <p><span class="track track-web">#sala 2</span></p>
+    <p class="talk">Deploy fácil e automático do seu projeto Django com Jenkins e Elastic Beanstalk</p>
+    <p class="speaker">Julio Melanda</p>
   </div>
+
 
   <div class="lecture">
     <p class="hour"><time>12:00</time></p>
@@ -73,23 +78,21 @@
     <p class="speaker">Marcos Paulo</p>
 
     <p><span class="track track-web">#sala 2</span></p>
-    <p class="talk">Deploy fácil e automático do seu projeto Django com Jenkins e Elastic Beanstalk</p>
-    <p class="speaker">Julio Melanda</p>
+
   </div>
 
   <div class="lecture">
     <p class="hour"><time>14:15</time></p>
     <p><span class="track track-beginners">#auditório</span></p>
-    <p class="talk">Tecnologia REST em Python</p>
-    <p class="speaker">Allex Lima</p>
+    <p class="talk">Redes Neurais Convolucionais em Python aplicadas à classificação de espécimes vegetais da Amazônia</p>
+    <p class="speaker">Allex Lima e Marcos Salame</p>
 
     <p><span class="track track-tutorials">#sala 1</span></p>
-    <p class="talk">Django para startups: o caso da amazonense Jukx App</p>
-    <p class="speaker">Felipe Carvalho</p>
-
-    <p><span class="track track-web">#sala 2</span></p>
     <p class="talk">Análise de Sentimento em Redes Sociais utilizando Scikit-learn+NLTK</p>
     <p class="speaker">Thais Almeida</p>
+
+    <p><span class="track track-web">#sala 2</span></p>
+
   </div>
 
   <div class="lecture">
@@ -99,12 +102,12 @@
     <p class="speaker">Felipe Colen</p>
 
     <p><span class="track track-tutorials">#sala 1</span></p>
-    <p class="talk">Buzzwords desconstruídas: bitcoin e blockchain!</p>
-    <p class="speaker">Mateus Costa</p>
+    <p class="talk">Pythonzão: uma saga do Python no mundo de Big Data</p>
+    <p class="speaker">Bruno Ábia Souza</p>
 
     <p><span class="track track-web">#sala 2</span></p>
-    <p class="talk">Arquitetura de BigData na globo.com</p>
-    <p class="speaker">Tarsis Figueredo Azevedo</p>
+
+
   </div>
 
   <div class="lecture">
@@ -120,12 +123,9 @@
     <p class="speaker">Julio Melanda</p>
 
     <p><span class="track track-tutorials">#sala 1</span></p>
-    <p class="talk">Programando a Felicidade</p>
-    <p class="speaker">Renzo Nuccitelli</p>
 
     <p><span class="track track-web">#sala 2</span></p>
-    <p class="talk">Pythonzão: uma saga do Python no mundo de Big Data</p>
-    <p class="speaker">Bruno Ábia Souza</p>
+
 
   </div>
 
