--- a/theme/templates/includes/days/day2.html
+++ b/theme/templates/includes/days/day2.html
@@ -72,11 +72,11 @@
     <p class="hour"><time>13:30</time></p>
     <p><span class="track track-beginners">#auditório</span></p>
     <p class="talk">Web2Py: Aplicações web descomplicadas em Python!</p>
-    <p class="speaker">Elloa B>. Guedes</p>
+    <p class="speaker">Elloa B. Guedes</p>
 
     <p><span class="track track-tutorials">#sala 1</span></p>
-    <p class="talk">PyLadies Belém: O começo de uma trajetória pythônica!</p>
-    <p class="speaker">Jéssica Paz</p>
+    <p class="talk">Django para startups: o caso da amazonense Jukx App</p>
+    <p class="speaker">Felipe Carvalho</p>
 
     <p><span class="track track-web">#sala 2</span></p>
     <p class="talk">Docker - Colocando aplicações em produção</p>
