Alteracoes de programacao
Former-commit-id: d9dbccd174e41b43fe8680492d1134bad8410a5a [formerly f68461bb7942648d00e12ee579bafb9dcb03c1e4]
Former-commit-id: c5cc415663254f870ab1fcc8b379b5bc03202def

--- a/theme/templates/includes/days/day1.html
+++ b/theme/templates/includes/days/day1.html
@@ -41,8 +41,7 @@
     <p class="speaker">Márcio Gomes da Silva</p>
 
     <p><span class="track track-web">#sala 2</span></p>
-    <p class="talk">Conhecendo e utilizando o simulador de redes tolerantes a atrasos PyDTN.</p>
-    <p class="speaker">Matheus Monte</p>
+
   </div>
 
   <div class="lecture">
@@ -70,21 +69,23 @@
   <div class="lecture">
     <p class="hour"><time>13:30</time></p>
     <p><span class="track track-beginners">#auditório</span></p>
-    <p class="talk">House of data - ciência de dados para desenvolvedores</p>
-    <p class="speaker">Ana Paula Gomes</p>
+    <p class="talk">Pythonzão: uma saga do Python no mundo de Big Data</p>
+    <p class="speaker">Bruno Ábia Souza</p>
 
     <p><span class="track track-tutorials">#sala 1</span></p>
     <p class="talk">Acessibilidade para deficientes visuais com Python</p>
     <p class="speaker">Marcos Paulo</p>
 
     <p><span class="track track-web">#sala 2</span></p>
+    <p class="talk">Conhecendo e utilizando o simulador de redes tolerantes a atrasos PyDTN.</p>
+    <p class="speaker">Matheus Monte</p>
 
   </div>
 
   <div class="lecture">
     <p class="hour"><time>14:15</time></p>
     <p><span class="track track-beginners">#auditório</span></p>
-    <p class="talk">Redes Neurais Convolucionais em Python aplicadas à classificação de espécimes vegetais da Amazônia</p>
+    <p class="talk">Aprendizado de máquinas na classificação de plantas amazônicas</p>
     <p class="speaker">Allex Lima e Marcos Salame</p>
 
     <p><span class="track track-tutorials">#sala 1</span></p>
@@ -102,8 +103,6 @@
     <p class="speaker">Felipe Colen</p>
 
     <p><span class="track track-tutorials">#sala 1</span></p>
-    <p class="talk">Pythonzão: uma saga do Python no mundo de Big Data</p>
-    <p class="speaker">Bruno Ábia Souza</p>
 
     <p><span class="track track-web">#sala 2</span></p>
 
