--- a/theme/templates/includes/days/day2.html
+++ b/theme/templates/includes/days/day2.html
@@ -37,8 +37,8 @@
     <p class="speaker">Carla Amor Divino Moreira Delgado</p>
 
     <p><span class="track track-tutorials">#sala 1</span></p>
-    <p class="talk">Code Smells &amp; Refactoring - Who you gonna call?</p>
-    <p class="speaker">Ana Paula Gomes</p>
+    <p class="talk">Implantação de Práticas Ágeis nas Corporações: Um caso real</p>
+    <p class="speaker">Marcelo Costa</p>
 
     <p><span class="track track-web">#sala 2</span></p>
     <p class="talk">Aprendendo conceitos de Física com Python: uma introdução ao VPython!</p>
