Retirada de provisoria da programacao
Former-commit-id: 7b53a763477158c25c269f8573e630857e3949c9 [formerly 119633b6826944d69ee9325fdeb4fe64d5d1eee1]
Former-commit-id: 50163f4b17069792720096eabc70bef461973e36

--- a/theme/templates/includes/days/day1.html
+++ b/theme/templates/includes/days/day1.html
@@ -1,5 +1,5 @@
 <div class="room active" id="day1">
-  <h1>Programação Provisória - Sábado</h1>
+  <h1>Programação - Sábado</h1>
   <p class="day-description">A submissão de palestras ainda está aberta.</p>
   <p class="local">LOCAL: UEA /EST</p>
 
