--- a/theme/templates/includes/days/day2.html
+++ b/theme/templates/includes/days/day2.html
@@ -1,5 +1,5 @@
 <div class="room" id="day2">
-  <h1>Programação Provisória - Domingo</h1>
+  <h1>Programação - Domingo</h1>
   <p class="day-description">A submissão de palestras ainda está aberta.</p>
   <p class="local">LOCAL: UEA /EST</p>
 
