--- a/theme/templates/includes/days/day1.html
+++ b/theme/templates/includes/days/day1.html
@@ -1,6 +1,6 @@
 <div class="room active" id="day1">
   <h1>Programação - Sábado</h1>
-  <p class="day-description">A submissão de palestras ainda está aberta.</p>
+  <p class="day-description"></p>
   <p class="local">LOCAL: UEA /EST</p>
 
   <div class="lecture">
@@ -20,7 +20,7 @@
   <div class="lecture">
     <p class="hour"><time>09:15</time></p>
     <p><span class="track track-beginners">#auditório</span></p>
-    <p class="talk">KeyNote</p>
+    <p class="talk"><a href="/images/slides/Fernando%20Massanori%20-%20Seja%20Feliz%20Programando%20em%20Python.pdf">KeyNote</a></p>
     <p class="speaker">Fernando Massanori</p>
   </div>
 
@@ -33,7 +33,7 @@
   <div class="lecture">
     <p class="hour"><time>10:30</time></p>
     <p><span class="track track-beginners">#auditório</span></p>
-    <p class="talk">Programando a Felicidade</p>
+    <p class="talk"><a href="/images/slides/Renzo%20Nuccitelli%20-%20Hackeando%20Sistemas.pdf">Programando a Felicidade</a></p>
     <p class="speaker">Renzo Nuccitelli</p>
 
     <p><span class="track track-tutorials">#sala 1</span></p>
@@ -45,15 +45,15 @@
   <div class="lecture">
     <p class="hour"><time>11:15</time></p>
     <p><span class="track track-beginners">#auditório</span></p>
-    <p class="talk">Python Assíncrono</p>
+    <p class="talk"><a href="/images/slides/Nilo%20Menezes%20-%20Python%20Ass%C3%ADncrono.pdf">Python Assíncrono</a></p>
     <p class="speaker">Nilo Menezes</p>
 
     <p><span class="track track-tutorials">#sala 1</span></p>
-    <p class="talk">Marketing e Persuasão, Design em Código, Empreendorismo Digital.</p>
+    <p class="talk"><a href="/images/slides/Loren%20Cayali%20-%20Os%20Bastidores%20do%20Marketing%20.pdf">Marketing e Persuasão, Design em Código, Empreendorismo Digital.</a></p>
     <p class="speaker">Loren Cayali e Wanderson Jackson</p>
 
     <p><span class="track track-web">#sala 2</span></p>
-    <p class="talk">Deploy fácil e automático do seu projeto Django com Jenkins e Elastic Beanstalk</p>
+    <p class="talk"><a href="/images/slides/Julio%20Melanda%20-%20Deploy%20Django%20em%20EBS.pdf">Deploy fácil e automático do seu projeto Django com Jenkins e Elastic Beanstalk</a></p>
     <p class="speaker">Julio Melanda</p>
   </div>
 
@@ -66,15 +66,15 @@
   <div class="lecture">
     <p class="hour"><time>13:30</time></p>
     <p><span class="track track-beginners">#auditório</span></p>
-    <p class="talk">Pythonzão: uma saga do Python no mundo de Big Data</p>
+    <p class="talk"><a href="/images/slides/Bruno%20Abia%20-%20Pythonz%27ao%20uma%20saga%20do%20Python%20no%20mundo%20big%20data.pdf">Pythonzão: uma saga do Python no mundo de Big Data</a></p>
     <p class="speaker">Bruno Ábia Souza</p>
 
     <p><span class="track track-tutorials">#sala 1</span></p>
-    <p class="talk">Acessibilidade para deficientes visuais com Python</p>
+    <p class="talk"><a href="/images/slides/Marcos%20Paulo%20-%20Acessibilidade-para-deficientes-visuais-com-Python-amazonas-v2.pdf">Acessibilidade para deficientes visuais com Python</a></p>
     <p class="speaker">Marcos Paulo</p>
 
     <p><span class="track track-web">#sala 2</span></p>
-    <p class="talk">Conhecendo e utilizando o simulador de redes tolerantes a atrasos PyDTN.</p>
+    <p class="talk"><a href="/images/slides/Matheus%20Monte%20-%20Palestra-PyDTN.pdf">Conhecendo e utilizando o simulador de redes tolerantes a atrasos PyDTN.</a></p>
     <p class="speaker">Matheus Monte</p>
 
   </div>
@@ -82,11 +82,11 @@
   <div class="lecture">
     <p class="hour"><time>14:15</time></p>
     <p><span class="track track-beginners">#auditório</span></p>
-    <p class="talk">Aprendizado de máquinas na classificação de plantas amazônicas</p>
+    <p class="talk"><a href="/images/slides/Allex%20e%20Marcos%20-%20Aprendizado%20de%20maquina%20na%20classificacao%20de%20plantas.pdf">Aprendizado de máquinas na classificação de plantas amazônicas</a></p>
     <p class="speaker">Allex Lima e Marcos Salame</p>
 
     <p><span class="track track-tutorials">#sala 1</span></p>
-    <p class="talk">Análise de Sentimento em Redes Sociais utilizando Scikit-learn+NLTK</p>
+    <p class="talk"><a href="/images/slides/Thais%20Gomes%20Almeida%20-%20An%C3%A1lise%20de%20Sentimento%20em%20Redes%20Sociais.pdf">Análise de Sentimento em Redes Sociais utilizando Scikit-learn+NLTK</a></p>
     <p class="speaker">Thais Almeida</p>
 
     <p><span class="track track-web">#sala 2</span></p>
@@ -96,7 +96,7 @@
   <div class="lecture">
     <p class="hour"><time>15:00</time></p>
     <p><span class="track track-beginners">#auditório</span></p>
-    <p class="talk">Começando com o microframework web Python mais popular: Flask!</p>
+    <p class="talk"><a href="/images/slides/Felipe%20Colen%20-%20Come%C3%A7ando%20com%20o%20MicroFramework%20Flask.pdf">Começando com o microframework web Python mais popular: Flask!</a></p>
     <p class="speaker">Felipe Colen</p>
 
     <p><span class="track track-tutorials">#sala 1</span></p>
@@ -115,7 +115,7 @@
   <div class="lecture">
     <p class="hour"><time>16:15</time></p>
     <p><span class="track track-beginners">#auditório</span></p>
-    <p class="talk">Trabalho remoto - é mesmo assim tão bom?</p>
+    <p class="talk"><a href="/images/slides/Julio%20Melanda%20-%20Trabalho%20Remoto.pdf">Trabalho remoto - é mesmo assim tão bom?</a></p>
     <p class="speaker">Julio Melanda</p>
 
     <p><span class="track track-tutorials">#sala 1</span></p>
@@ -128,7 +128,7 @@
   <div class="lecture">
     <p class="hour"><time>17:00</time></p>
     <p><span class="track track-beginners">#auditório</span></p>
-    <p class="talk">Encontro com a comunidade</p>
+    <p class="talk"><a href="/images/slides/Nilo%20Menezes%20-%20Comunidade.pptx">Encontro com a comunidade</a></p>
     <p class="speaker"></p>
   </div>
 
