--- a/theme/templates/includes/days/day2.html
+++ b/theme/templates/includes/days/day2.html
@@ -1,6 +1,6 @@
 <div class="room" id="day2">
   <h1>Programação - Domingo</h1>
-  <p class="day-description">A submissão de palestras ainda está aberta.</p>
+  <p class="day-description"></p>
   <p class="local">LOCAL: UEA /EST</p>
 
   <div class="lecture">
@@ -20,7 +20,7 @@
   <div class="lecture">
     <p class="hour"><time>09:15</time></p>
     <p><span class="track track-beginners">#auditório</span></p>
-    <p class="talk">KeyNote</p>
+    <p class="talk"><a href="/images/slides/Nilo%20Menezes%20-%20Pythonizando.pptx">KeyNote</a></p>
     <p class="speaker">Nilo Menezes</p>
   </div>
 
@@ -33,30 +33,30 @@
   <div class="lecture">
     <p class="hour"><time>10:30</time></p>
     <p><span class="track track-beginners">#auditório</span></p>
-    <p class="talk">Usando Python para a introdução à programação em cursos universitários</p>
+    <p class="talk"><a href="/images/slides/Carla%20Delgado%20-%20Usando%20Python%20para%20a%20introdu%C3%A7%C3%A3o%20%C3%A0%20programacao%20em%20cursos%20universitarios.pdf">Usando Python para a introdução à programação em cursos universitários</a></p>
     <p class="speaker">Carla Amor Divino Moreira Delgado</p>
 
     <p><span class="track track-tutorials">#sala 1</span></p>
-    <p class="talk">Implantação de Práticas Ágeis nas Corporações: Um caso real</p>
+    <p class="talk"><a href="/images/slides/Marcelo%20Costa%20-%20Implanta%C3%A7%C3%A3o%20de%20Pr%C3%A1ticas%20%C3%81geis%20nas%20Corpora%C3%A7%C3%B5es%20-%20Python%20-%20versao%20base.pdf">Implantação de Práticas Ágeis nas Corporações: Um caso real</a></p>
     <p class="speaker">Marcelo Costa</p>
 
     <p><span class="track track-web">#sala 2</span></p>
-    <p class="talk">Aprendendo conceitos de Física com Python: uma introdução ao VPython!</p>
+    <p class="talk"><a href="/images/slides/Paulo Giovani%20-%20Apresentacao_VPython_PyConAmazonia2017.pdf">Aprendendo conceitos de Física com Python: uma introdução ao VPython!</a></p>
     <p class="speaker">Paulo Giovani</p>
   </div>
 
   <div class="lecture">
     <p class="hour"><time>11:15</time></p>
     <p><span class="track track-beginners">#auditório</span></p>
-    <p class="talk">Kivy: Python no celular e em vários outros lugares!</p>
+    <p class="talk"><a href="/images/slides/Diego%20Guimaraes%20-%20Kivy.pdf">Kivy: Python no celular e em vários outros lugares!</a></p>
     <p class="speaker">Diego Moreira Guimarães</p>
 
     <p><span class="track track-tutorials">#sala 1</span></p>
-    <p class="talk">Docker, Django e Amazon Container Services</p>
+    <p class="talk"><a href="/images/slides/Nilo%20Menezes%20-%20Django%2C%20Docker%20e%20Amazon%20Container%20Services.pptx">Docker, Django e Amazon Container Services</a></p>
     <p class="speaker">Nilo Menezes</p>
 
     <p><span class="track track-web">#sala 2</span></p>
-    <p class="talk">Hospedando uma aplicação Django no Azure</p>
+    <p class="talk"><a href="/images/slides/Matheus%20Monte%20-%20Palestra-DangoAzure.pdf">Hospedando uma aplicação Django no Azure</a></p>
     <p class="speaker">Matheus Monte</p>
 
 
@@ -71,15 +71,15 @@
   <div class="lecture">
     <p class="hour"><time>13:30</time></p>
     <p><span class="track track-beginners">#auditório</span></p>
-    <p class="talk">Web2Py: Aplicações web descomplicadas em Python!</p>
+    <p class="talk"><a href="/images/slides/Elloa%20B%20Guedes%20-%20Web2py.pdf">Web2Py: Aplicações web descomplicadas em Python!</a></p>
     <p class="speaker">Elloa B. Guedes</p>
 
     <p><span class="track track-tutorials">#sala 1</span></p>
-    <p class="talk">Django para startups: o caso da amazonense Jukx App</p>
+    <p class="talk"><a href="/images/slides/Felipe%20Carvalho%20-%20Django%20para%20startups.pdf">Django para startups: o caso da amazonense Jukx App</a></p>
     <p class="speaker">Felipe Carvalho</p>
 
     <p><span class="track track-web">#sala 2</span></p>
-    <p class="talk">Docker - Colocando aplicações em produção</p>
+    <p class="talk"><a href="/images/slides/Rafael%20Chiavegatto%20-%20Docker%20-%20Utilizando%20no%20seu%20dia%20a%20dia.pdf">Docker - Colocando aplicações em produção</a></p>
     <p class="speaker">Rafael Chiavegatto</p>
 
   </div>
@@ -87,24 +87,24 @@
   <div class="lecture">
     <p class="hour"><time>14:15</time></p>
     <p><span class="track track-beginners">#auditório</span></p>
-    <p class="talk">Python + Flask + MongoDB = Quokka CMS</p>
+    <p class="talk"><a href="/images/slides/Marcos%20Paulo%20-%20palestra-flask-python-amazonas-2017-v2.pdf">Python + Flask + MongoDB = Quokka CMS</a></p>
     <p class="speaker">Marcos Paulo</p>
 
     <p><span class="track track-tutorials">#sala 1</span></p>
 
     <p><span class="track track-web">#sala 2</span></p>
-    <p class="talk">Utilização da Linguagem Python e dos conhecimentos em Matemática no Ensino da Lógica de Programação</p>
+    <p class="talk"><a href="/images/slides/Karla%20Pereira%20-%20L%C3%B3gica%20de%20Programa%C3%A7%C3%A3o.pdf">Utilização da Linguagem Python e dos conhecimentos em Matemática no Ensino da Lógica de Programação</a></p>
     <p class="speaker">Karla Pereira</p>
   </div>
 
   <div class="lecture">
     <p class="hour"><time>15:00</time></p>
     <p><span class="track track-beginners">#auditório</span></p>
-    <p class="talk">Python, ciência dos dados e redes sociais: uma combinação poderosa</p>
+    <p class="talk"><a href="/images/slides/Alice%20Adativa%20-%20Python%2C%20ci%C3%AAncia%20dos%20dados%20e%20redes%20sociais.pdf">Python, ciência dos dados e redes sociais: uma combinação poderosa</a></p>
     <p class="speaker">Alice Adativa</p>
 
     <p><span class="track track-tutorials">#sala 1</span></p>
-    <p class="talk">Redes Neurais Artificiais para o Reconhecimento Facial e de Voz em Interfaces de Controle e de Supervisão e Aquisição de Dados e Interfaces Homem-Máquina</p>
+    <p class="talk"><a href="/images/slides/FABIANO%20STINGELIN%20CARDOSO%20-%20Redes%20Neurais%20Artificiais%20para%20o%20Reconhecimento%20Facial%20e%20de%20Voz%20em%20Interfaces%20de%20Controle%20e%20de%20Supervis%C3%A3o%20e%20Aquisi%C3%A7%C3%A3o%20de%20Dados%20e%20Interfaces%20Homem-M%C3%A1q%20-%20Rev2.pptx">Redes Neurais Artificiais para o Reconhecimento Facial e de Voz em Interfaces de Controle e de Supervisão e Aquisição de Dados e Interfaces Homem-Máquina</a></p>
     <p class="speaker">Fabiano Cardoso</p>
   </div>
 
@@ -117,7 +117,7 @@
   <div class="lecture">
     <p class="hour"><time>16:15</time></p>
     <p><span class="track track-beginners">#auditório</span></p>
-    <p class="talk">Palestra Seja um Autor de livros técnicos</p>
+    <p class="talk"><a href="/images/slides/Ana%20Carolina%20Prates%20-%20Seja%20um%20autor%20de%20livros%20t%C3%A9cnicos.pdf">Palestra Seja um Autor de livros técnicos</a></p>
     <p class="speaker">Ana Carolina Prates</p>
 
   </div>
@@ -125,7 +125,7 @@
   <div class="lecture">
     <p class="hour"><time>17:00</time></p>
     <p><span class="track track-beginners">#auditório</span></p>
-    <p class="talk">Mesa Redonda</p>
+    <p class="talk"><a href="">Mesa Redonda</a></p>
     <p class="speaker"></p>
   </div>
 
